# cscppc

./: .gitignore  .gitmodules  .packit.yaml  .travis.yml  CMakeLists.txt  Makefile  README  cppcheck-gcc  cppcheck-gcc.c  csclng.c  csclng.txt  cscppc.c  cscppc.txt  csgcca.c  csmatch.c  cswrap-core.c  cswrap-core.h  default.supp  make-srpm.sh  upload-release.sh  x86_64-redhat-linux-c++
.github/: dependabot.yml
.github/workflows/: ci.yml  coverity.yml  differential-shellcheck.yml
data/: CMakeLists.txt
data/cscppc/: default.supp
doc/: CMakeLists.txt  csclng.adoc  cscppc.adoc  csgcca.adoc  csmatch.adoc
src/: CMakeLists.txt  csclng.c  cscppc.c  csgcca.c  csmatch.c  cswrap-core.c  cswrap-core.h
tests/: CMakeLists.txt  testlib.sh
tests/0000-static-build/: runtest.sh
tests/0001-direct-invocation/: runtest.sh
tests/0002-conditions-to-run-analyzer/: runtest.sh
tests/0003-translation-of-args/: runtest.sh
tests/0004-exit-status-and-signals/: runtest.sh
